Don't invalidate the whole imagemap on unrelated attribute changes in the subtree.  Bug 304753, r+sr=jst